version/0.18/_sources/api/solver/_autosummary/settings/bodies.rst.txt
:orphan:

.. _bodies:

bodies
======

.. autoclass:: ansys.fluent.core.solver.settings_232.bodies.bodies
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`bodies_child <bodies_child>`


.. rubric:: Included in:

================================   =================================

Parent                                                       Summary

================================   =================================
:ref:`parts_child <parts_child>`       'child_object_type' of parts.

================================   =================================

